--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/taskplannerdb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-
+server.port=${PORT:8080}
